Fixes #1915: Notes and Discrepancies data export localization. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2392 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3811,6 +3811,16 @@ data_entry_quality = Data Entry Quality
 crf_data_evaluation = CRF data evaluation
 
 allowRulesAutoScheduling = Auto-scheduling for Insert Rules
+thread_id = Thread ID
+parent_note_id = Parent Note ID
+discrepancy_type = Discrepancy Type
+study_identifier = Study Identifier
+item_field_name_value = Item field name/value
+number_of_notes = Number of Notes
+query = Query
+failed_validation_check = Failed Validation Check
+annotation = Annotation
+resolution_proposed = resolution proposed
 
 error = Error:
 author = Author
