--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7055,6 +7055,40 @@ crf_data_evaluation = \u041E\u0446\u0435\u043D\u043A\u0430 \u0434\u0430\u043D\u0
 #allowRulesAutoScheduling = Автопланирование для правил со вставкой значений
 allowRulesAutoScheduling = \u0410\u0432\u0442\u043e\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u043f\u0440\u0430\u0432\u0438\u043b \u0441\u043e \u0432\u0441\u0442\u0430\u0432\u043a\u043e\u0439 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0439
 
+#thread_id = Thread ID
+#thread_id = ID Потока
+thread_id = \u0049\u0044 \u041f\u043e\u0442\u043e\u043a\u0430
+#parent_note_id = Parent Note ID
+#parent_note_id = ID родительской заметки
+parent_note_id = \u0049\u0044 \u0440\u043e\u0434\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u043e\u0439 \u0437\u0430\u043c\u0435\u0442\u043a\u0438
+#days_since_update = Days Since Updated
+#days_since_update = Дней после обновления
+days_since_update = \u0414\u043d\u0435\u0439 \u043f\u043e\u0441\u043b\u0435 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f
+#discrepancy_type = Discrepancy Type
+#discrepancy_type = Тип заметки
+discrepancy_type = \u0422\u0438\u043f \u0437\u0430\u043c\u0435\u0442\u043a\u0438
+#study_identifier = Study Identifier
+#study_identifier = Идентификатор исследования
+study_identifier = \u0418\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
+#item_field_name_value = Item field name/value
+#item_field_name_value = Имя и значение поля
+item_field_name_value = \u0418\u043c\u044f \u0438 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u043f\u043e\u043b\u044f
+#number_of_notes = Number of Notes
+#number_of_notes = Количество заметок
+number_of_notes = \u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u0437\u0430\u043c\u0435\u0442\u043e\u043a
+#query = query
+#query = Замечание
+query = \u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u0435
+#failed_validation_check = Failed Validation Check
+#failed_validation_check = Нарушенно валидационное правило
+failed_validation_check = \u041d\u0430\u0440\u0443\u0448\u0435\u043d\u043d\u043e \u0432\u0430\u043b\u0438\u0434\u0430\u0446\u0438\u043e\u043d\u043d\u043e\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u043e
+#annotation = Annotation
+#annotation = Аннотация
+annotation = \u0410\u043d\u043d\u043e\u0442\u0430\u0446\u0438\u044f
+#resolution_proposed  =  Resolution Proposed
+#resolution_proposed  = Предложено решение
+resolution_proposed  = \u041f\u0440\u0435\u0434\u043b\u043e\u0436\u0435\u043d\u043e \u0440\u0435\u0448\u0435\u043d\u0438\u0435
+
 #error = Error:
 #error = Ошибка:
 error = \u041e\u0448\u0438\u0431\u043a\u0430\u003a
