Fixes #1943: SDV widget shows wrong numbers of already SDVed CRFs in RU locale. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2398 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -227,8 +227,8 @@ character_string = \u0442\u0435\u043a\u0441\u0442\u043e\u0432\u0430\u044f \u0441
 #checkbox = чекбокс
 checkbox = \u0447\u0435\u043a\u0431\u043e\u043a\u0441
 #complete =  Complete
-#complete = Завершен
-complete = \u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d
+#complete = Завершено
+complete = \u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 #completed =  completed
 #completed = завершен
 completed = \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d
