Refs #1915: Notes and Discrepancies data export localization. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2408 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -385,3 +385,5 @@ unlock=unlock
 
 # ClinCapture #86 "Not Closed" DN's status
 Not_Closed = Not Closed
+annotation =  Annotation
+failed_validation_check =  Failed Validation Check
