--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -619,3 +619,11 @@ Not_Closed = \u041d\u0435 \u0437\u0430\u043a\u0440\u044b\u0442\u043e
 #file_upper_case = Файл
 file_upper_case = \u0424\u0430\u0439\u043b
 
+#annotation =  Annotation
+#annotation = Аннотация
+annotation = \u0410\u043d\u043d\u043e\u0442\u0430\u0446\u0438\u044f
+#failed_validation_check =  Failed Validation Check
+#failed_validation_check = Нарушенное валидационное правило
+failed_validation_check = \u041d\u0430\u0440\u0443\u0448\u0435\u043d\u043d\u043e\u0435 \u0432\u0430\u043b\u0438\u0434\u0430\u0446\u0438\u043e\u043d\u043d\u043e\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u043e
+
+
