--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3848,3 +3848,5 @@ export_file = Export File
 job_status = Job Status
 currently_executing = Currently Executing
 skip_next_run = Skip Next Run
+pg = pg.
+study_event_date = Study Event Date
