--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7187,3 +7187,10 @@ currently_executing = \u0412\u044b\u043f\u043e\u043b\u043d\u044f\u0435\u0442\u04
 #skip_next_run = Skip Next Run
 #skip_next_run = Пропустить задачу
 skip_next_run = \u041f\u0440\u043e\u043f\u0443\u0441\u0442\u0438\u0442\u044c \u0437\u0430\u0434\u0430\u0447\u0443
+#pg = pg.
+#pg = стр.
+pg = \u0441\u0442\u0440\u002e
+#study_event_date = Study Event Date
+#study_event_date = Дата события исследования
+study_event_date = \u0414\u0430\u0442\u0430 \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
+
