Fixes #1917: Data type names are not translated in RS. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2413 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3850,3 +3850,11 @@ currently_executing = Currently Executing
 skip_next_run = Skip Next Run
 pg = pg.
 study_event_date = Study Event Date
+
+data_type_st = Text
+data_type_int = Number
+data_type_real = Real
+data_type_date = Date
+data_type_pdate = Partial Date
+data_type_file = File
+data_type_code = Code
