--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7194,3 +7194,24 @@ pg = \u0441\u0442\u0440\u002e
 #study_event_date = Дата события исследования
 study_event_date = \u0414\u0430\u0442\u0430 \u0441\u043e\u0431\u044b\u0442\u0438\u044f \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
 
+#data_type_st = Text
+#data_type_st = Текст
+data_type_st = \u0422\u0435\u043a\u0441\u0442
+#data_type_int = Number
+#data_type_int = Число
+data_type_int = \u0427\u0438\u0441\u043b\u043e
+#data_type_real = Real
+#data_type_real = Дробное
+data_type_real = \u0414\u0440\u043e\u0431\u043d\u043e\u0435
+#data_type_date = Date
+#data_type_date = Дата
+data_type_date = \u0414\u0430\u0442\u0430
+#data_type_pdate = Partial Date
+#data_type_pdate = Част. Дата
+data_type_pdate = \u0427\u0430\u0441\u0442. \u0414\u0430\u0442\u0430
+#data_type_file = File
+#data_type_file = Файл
+data_type_file = \u0424\u0430\u0439\u043b
+#data_type_code = Code
+#data_type_code = Код
+data_type_code = \u041a\u043e\u0434
