Fixes #1782: User API: Create_User. Submitted by Sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2417 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -456,6 +456,20 @@ rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
 rest.authentication.noUserFound=No user found for specified username
 rest.authentication.wrongUserNameOrPassword=Wrong username or password specified
 rest.authentication.wrongStudyName=No study found for specified study name
+rest.authenticationservice.authenticate.empty.username=Username parameter is empty
+rest.authenticationservice.authenticate.empty.password=Password parameter is empty
+rest.authenticationservice.authenticate.empty.studyname=Study name parameter is empty
+rest.authenticationservice.authenticate.missing.username=Username parameter is missing
+rest.authenticationservice.authenticate.missing.password=Password parameter is missing
+rest.authenticationservice.authenticate.missing.studyname=Study name parameter is missing
+rest.authentication.authorisedUserDoesNotHaveAccess=Authorised user does not have access
+rest.createUser.usernameHasBeenTaken=Username has been taken
+rest.createUser.operationFailed=Failed to create user
+rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist.
+rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist.
+rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
+rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
+rest.createUser.authorisedUserIsNotAssignedToStudy=Authorised user is not assigned to study "{0}"
 rest.authentication.emptyUsername=Username parameter is empty
 rest.authentication.emptyPassword=Password parameter is empty
 rest.authentication.emptyStudyName=Studyname parameter is empty
