--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -723,6 +723,48 @@ rest.authentication.wrongUserNameOrPassword=\u0423\u043A\u0430\u0437\u0430\u043D
 #rest.authentication.wrongStudyName=Wrong studyname
 #rest.authentication.wrongStudyName=Неправильное название исследования
 rest.authentication.wrongStudyName=\u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#rest.authenticationservice.authenticate.empty.username=Username parameter is empty
+#rest.authenticationservice.authenticate.empty.username=Имя пользователя должно быть заполненно
+rest.authenticationservice.authenticate.empty.username=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u043E
+#rest.authenticationservice.authenticate.empty.password=Password parameter is empty
+#rest.authenticationservice.authenticate.empty.password=Пароль должен быть заполнен
+rest.authenticationservice.authenticate.empty.password=\u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D
+#rest.authenticationservice.authenticate.empty.studyname=Study name parameter is empty
+#rest.authenticationservice.authenticate.empty.studyname=Название исследования должно быть заполненно
+rest.authenticationservice.authenticate.empty.studyname=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u043E
+#rest.authenticationservice.authenticate.missing.username=Username parameter is missing
+#rest.authenticationservice.authenticate.missing.username=Укажите имя пользователя
+rest.authenticationservice.authenticate.missing.username=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+#rest.authenticationservice.authenticate.missing.password=Password parameter is missing
+#rest.authenticationservice.authenticate.missing.password=Укажите пароль
+rest.authenticationservice.authenticate.missing.password=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+#rest.authenticationservice.authenticate.missing.studyname=Studyname parameter is missing
+#rest.authenticationservice.authenticate.missing.studyname=Укажите название исследования
+rest.authenticationservice.authenticate.missing.studyname=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#rest.authentication.authorisedUserDoesNotHaveAccess=Authorised user does not have access
+#rest.authentication.authorisedUserDoesNotHaveAccess=Авторизованный пользователь не имеет доступа
+rest.authentication.authorisedUserDoesNotHaveAccess=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u0438\u043C\u0435\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
+#rest.createUser.usernameHasBeenTaken=Username has been taken
+#rest.createUser.usernameHasBeenTaken=Имя пользователя уже занято
+rest.createUser.usernameHasBeenTaken=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442\u043E
+#rest.createUser.operationFailed=Failed to create user
+#rest.createUser.operationFailed=Не удалось создать пользователя
+rest.createUser.operationFailed=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+#rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist.
+#rest.createUser.roleDoesNotExist=Роль с идентификатором "{0}" не существует.
+rest.createUser.roleDoesNotExist=\u0420\u043E\u043B\u044C \u0441 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440\u043E\u043C "{0}" \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442.
+#rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist.
+#rest.createUser.studyDoesNotExist=Исследование с идентификатором "{0}" не существует.
+rest.createUser.studyDoesNotExist=\u0418\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435 \u0441 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440\u043E\u043C "{0}" \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442.
+#rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
+#rest.createUser.itsForbiddenAssignSiteLevelRoleToStudy=Роль уровня центра не может быть назначена в исследование.
+rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0446\u0435\u043D\u0442\u0440\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435.
+#rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
+#rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=Роль уровня исследования не может быть назначена в центр.
+rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0446\u0435\u043D\u0442\u0440.
+#rest.createUser.authorisedUserIsNotAssignedToStudy=Authorised user is not assigned to study "{0}"
+#rest.createUser.authorisedUserIsNotAssignedToStudy=Авторизованный пользователь не назначен в исследование "{0}"
+rest.createUser.authorisedUserIsNotAssignedToStudy=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435 "{0}"
 #rest.authentication.emptyUsername=Username parameter is empty
 #rest.authentication.emptyUsername=Имя пользователя должно быть заполненно
 rest.authentication.emptyUsername=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u043E
