--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3661,6 +3661,9 @@ this_crf_has_associated_data = This CRF has associated data that is preventing i
 this_crf_has_no_conflict_data = This CRF has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_has_been_removed = The CRF has been successfully removed
 
+sas_name_annotation = SAS Name Annotation
+crfs_parameters = CRFs Parameters
+
 systemProperty.crf_evaluation.name=CRF Evaluation
 systemProperty.allowCrfEvaluation.label=Allow CRF evaluation
 systemProperty.allowCrfEvaluation.description=CRF evaluation allows a user to evaluate the data in a designated CRF without having access to any other data in the Study.  System properties defined here apply as defaults to all studies. However, they can be overridden at study level under Tasks -> Build Study.
