--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -6613,6 +6613,14 @@ aec = AEC
 aeg = AEG
 #aegc =  AEGC
 aegc = AEGC
+
+#sas_name_annotation = SAS Name Annotation
+#sas_name_annotation = SAS Аннотирование имен
+sas_name_annotation = SAS \u0410\u043D\u043D\u043E\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0438\u043C\u0435\u043D
+#crfs_parameters = CRFs Parameters
+#crfs_parameters = Параметры ИРК
+crfs_parameters = \u041F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u0418\u0420\u041A
+
 #confirm_deletion_of_crf =   Confirm Deletion of CRF
 #confirm_deletion_of_crf = Подтвердить удаление ИРК
 confirm_deletion_of_crf = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0418\u0420\u041a
