Fixes #1666: Buggy rules studio - not picking a CRF Version invalidates the Target. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2443 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3796,6 +3796,9 @@ rs.message.selectItemsToShowHide = An show/hide action was selected but the item
 rs.message.invalidExpression = Cannot validate an empty or incomplete expressions.
 rs.message.invalidItemsSelected = A rule should only contain valid items in the selected study but the current rule contains invalid items that do not exist in the selected study. Fix the items to proceed.
 rs.message.checkLog = The rule was not saved! Check the server logs for details
+rs.message.selectEvent = Please select Event before specifying target.
+rs.message.selectCRF = Please select CRF before specifying target.
+rs.message.selectVersion = Please select CRF Version before specifying target.
 
 rs.validation.result = Rule validation results:
 rs.validation.valid = Rule is valid
