--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7009,6 +7009,15 @@ rs.message.invalidItemsSelected = \u041F\u0440\u0430\u0432\u0438\u043B\u043E \u0
 #rs.message.checkLog = The rule was not saved! Check the server logs for details.
 #rs.message.checkLog = Правило не было сохранено! Проверьте логи сервера для большей информации.
 rs.message.checkLog = \u041F\u0440\u0430\u0432\u0438\u043B\u043E \u043D\u0435 \u0431\u044B\u043B\u043E \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u043E! \u041F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u043B\u043E\u0433\u0438 \u0441\u0435\u0440\u0432\u0435\u0440\u0430 \u0434\u043B\u044F \u0431\u043E\u043B\u044C\u0448\u0435\u0439 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u0438.
+#rs.message.selectEvent = Please select event before specifying target.
+#rs.message.selectEvent = Пожалуйста, выберите Cобытие перед указанием цели.
+rs.message.selectEvent = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0043\u043e\u0431\u044b\u0442\u0438\u0435 \u043f\u0435\u0440\u0435\u0434 \u0443\u043a\u0430\u0437\u0430\u043d\u0438\u0435\u043c \u0446\u0435\u043b\u0438\u002e
+#rs.message.selectCRF = Please select CRF before specifying target.
+#rs.message.selectCRF = Пожалуйста, выберите ИРК перед указанием цели.
+rs.message.selectCRF = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0418\u0420\u041a \u043f\u0435\u0440\u0435\u0434 \u0443\u043a\u0430\u0437\u0430\u043d\u0438\u0435\u043c \u0446\u0435\u043b\u0438\u002e
+#rs.message.selectVersion = Please select CRF version before specifying target.
+#rs.message.selectVersion = Пожалуйста, выберите Версию ИРК перед указанием цели.
+rs.message.selectVersion = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0412\u0435\u0440\u0441\u0438\u044e \u0418\u0420\u041a \u043f\u0435\u0440\u0435\u0434 \u0443\u043a\u0430\u0437\u0430\u043d\u0438\u0435\u043c \u0446\u0435\u043b\u0438\u002e
 
 #rs.validation.result = Rule validation results
 #rs.validation.result = Результат валидации правила
@@ -7045,6 +7054,7 @@ rs.validation.insertAction = \u0412\u0441\u0442\u0430\u0432\u043A\u0430 \u0437\u
 rs.validation.showHideAction = \u0421\u043A\u0440\u044B\u0442\u0438\u0435/\u041F\u0440\u043E\u044F\u0432\u043B\u0435\u043D\u0438\u0435 \u043F\u043E\u043B\u044F
 #ready_for_evaluation = Ready for Evaluation
 #ready_for_evaluation = Готовы к оценке
+
 ready_for_evaluation = \u0413\u043E\u0442\u043E\u0432\u044B \u043A \u043E\u0446\u0435\u043D\u043A\u0435
 #evaluation_completed = Evaluation Completed
 #evaluation_completed = Оценка завершена
