Fixes #1970: Handle cases where the first item reusing a response label does not have options defined, as return an appropriate error message
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2449 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -670,6 +670,13 @@ resp_label_with_different_resp_options = RESPONSE_OPTIONS_TEXT can not be differ
 
 resp_label_with_different_resp_options_html_error = RESPONSE_OPTIONS_TEXT can not be different for the same RESPONSE_LABEL.
 
+resp_label_template_different_resp_options = You have specified different number of Options and Values for the same Response Option Label. \
+												Please make sure that all options were provided for the first item with this Response Option Label. \
+												Error on row
+
+resp_label_template_different_resp_options_html_error = You have specified different number of Options and Values for the same Response Option Label. \
+												Please make sure that all options were provided for the first item with this Response Option Label.
+
 resp_label_with_different_resp_values = REPONSE_VALUES can not be different for the same RESPONSE_LABEL. Error on row
 
 resp_label_with_different_resp_values_html_error = RESPONSE_VALUES_OR_CALCULATIONS can not be different for the same RESPONSE_LABEL.
