Fixed #1969: DN shortcut does not scroll page to the highlighted input. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2456 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2666,7 +2666,13 @@ crf_notes = Discrepancy Notes
 open = New
 updated = Updated
 closed = Closed
+
+crf_shortcuts_header = CRF Shortcuts
+openDn = New Discrepancies
+updatedDn = Updated Discrepancies
+closedDn = Closed Discrepancies
 annotations = Annotations
+itemsToSDV = Items to SDV
 
 password_required = Password Required
 download_discrepancy_notes = Download discrepancy notes for all events (filtered for status or type)
