--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -4006,9 +4006,24 @@ updated = \u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u043e
 #closed =  Closed
 #closed = Закрыт
 closed = \u0417\u0430\u043a\u0440\u044b\u0442
+#crf_shortcuts_header = CRF Shortcuts
+#crf_shortcuts_header = Ярлыки замечаний
+crf_shortcuts_header = \u042F\u0440\u043B\u044B\u043A\u0438 \u0437\u0430\u043C\u0435\u0447\u0430\u043D\u0438\u0439
+#openDn =  New Discrepancies
+#openDn = Открытые замечания
+openDn = \u041E\u0442\u043A\u0440\u044B\u0442\u044B\u0435 \u0437\u0430\u043C\u0435\u0447\u0430\u043D\u0438\u044F
+#updatedDn =  Updated Discrepancies
+#updatedDn = Обновленные замечания
+updatedDn = \u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044B\u0435 \u0437\u0430\u043C\u0435\u0447\u0430\u043D\u0438\u044F
+#closedDn =  Closed Discrepancies
+#closedDn = Закрытые замечания
+closedDn = \u0417\u0430\u043A\u0440\u044B\u0442\u044B\u0435 \u0437\u0430\u043C\u0435\u0447\u0430\u043D\u0438\u044F
 #annotations =  Annotations
 #annotations = Аннотации
 annotations = \u0410\u043d\u043d\u043e\u0442\u0430\u0446\u0438\u0438
+#itemsToSDV = Items to SDV
+#itemsToSDV = Переменные, которые требуют SDV
+itemsToSDV = \u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435, \u043A\u043E\u0442\u043E\u0440\u044B\u0435 \u0442\u0440\u0435\u0431\u0443\u044E\u0442 SDV
 #password_required =  Password Required
 #password_required = Требуется пароль
 password_required = \u0422\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u043f\u0430\u0440\u043e\u043b\u044c
