Fixes #1974: Send a DCF (reformatted DN in PDF) to a user. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2457 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7248,3 +7248,23 @@ data_type_file = \u0424\u0430\u0439\u043b
 #data_type_code = Code
 #data_type_code = Код
 data_type_code = \u041a\u043e\u0434
+
+dcf = DCF
+discrepancy_correction_form = Discrepancy Correction Form
+dcf_specify_render_type = Please specify how DCFs should be generated
+dcf_render_save = Save the DCF
+dcf_render_print = Print the DCF
+dcf_render_email = Email the DCF to
+dcf_generate = Generete DCF
+investigator = Investigator
+type = Type
+crf_item_name = CRF Item Name
+crf_value = CRF Value
+question_to_site = Question to Site
+response_from_site = Response from Site
+dcf_visit = Visit
+dcf_investigators_signature = Investigator's Signature
+dcf_dm_use_only = DM USE ONLY
+dcf_dm_signature = DM Signature
+dcf_no_db_change = No DB Change
+dcf_db_change = DB Change
