--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3870,3 +3870,23 @@ data_type_date = Date
 data_type_pdate = Partial Date
 data_type_file = File
 data_type_code = Code
+
+dcf = DCF
+discrepancy_correction_form = Discrepancy Correction Form
+dcf_specify_render_type = Please specify how DCFs should be generated
+dcf_render_save = Save the DCF
+dcf_render_print = Print the DCF
+dcf_render_email = Email the DCF to
+dcf_generate = Generete DCF
+investigator = Investigator
+type = Type
+crf_item_name = CRF Item Name
+crf_value = CRF Value
+question_to_site = Question to Site
+response_from_site = Response from Site
+dcf_visit = Visit
+dcf_investigators_signature = Investigator's Signature
+dcf_dm_use_only = DM USE ONLY
+dcf_dm_signature = DM Signature
+dcf_no_db_change = No DB Change
+dcf_db_change = DB Change
