Fixes #1971: Review email messages to include an acceptable template with relevant information submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2458 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3871,6 +3871,24 @@ data_type_pdate = Partial Date
 data_type_file = File
 data_type_code = Code
 
+job_error_mail.subject = An exception was thrown
+job_error_mail.greeting = Dear
+job_error_mail.body = You have received this email because an exception was thrown while running an extract job on your server.
+job_error_mail.serverUrl = <li><b>Server URL:</b>
+job_error_mail.studyName = <li><b>Study name:</b>
+job_error_mail.siteName = <li><b>Site name:</b>
+job_error_mail.userName = <li><b>User name:</b>
+job_error_mail.userEmail = <li><b>User email:</b>
+job_error_mail.userRole = <li><b>User role:</b>
+job_error_mail.jobName = <li><b>Job name:</b>
+job_error_mail.fileName = <li><b>File name:</b>
+job_error_mail.datasetName = <li><b>Dataset name:</b>
+job_error_mail.error = <li><b>Error:</b>
+job_error_mail.additionalInfo = <li><b>Additional Information:</b>
+
+mail.respect_privacy = We respect your privacy, please review our
+mail.privacy_policy = Privacy Policy
+mail.more_information = for more information.
 dcf = DCF
 discrepancy_correction_form = Discrepancy Correction Form
 dcf_specify_render_type = Please specify how DCFs should be generated
