--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7249,6 +7249,58 @@ data_type_file = \u0424\u0430\u0439\u043b
 #data_type_code = Код
 data_type_code = \u041a\u043e\u0434
 
+#job_error_mail.subject = An exception was thrown
+#job_error_mail.subject = Произошла ошибка.
+job_error_mail.subject = \u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430\u002e
+#job_error_mail.greeting = Dear
+#job_error_mail.greeting = Уважаемый
+job_error_mail.greeting = \u0423\u0432\u0430\u0436\u0430\u0435\u043c\u044b\u0439
+#job_error_mail.body = You have received this email because an exception was thrown while running an extract job on your server.
+#job_error_mail.body = Вы получили это письмо, потому что было во время выполнения экстракта на сервере произошла ошибка.
+job_error_mail.body = \u0412\u044b \u043f\u043e\u043b\u0443\u0447\u0438\u043b\u0438 \u044d\u0442\u043e \u043f\u0438\u0441\u044c\u043c\u043e\u002c \u043f\u043e\u0442\u043e\u043c\u0443 \u0447\u0442\u043e \u0431\u044b\u043b\u043e \u0432\u043e \u0432\u0440\u0435\u043c\u044f \u0432\u044b\u043f\u043e\u043b\u043d\u0435\u043d\u0438\u044f \u044d\u043a\u0441\u0442\u0440\u0430\u043a\u0442\u0430 \u043d\u0430 \u0441\u0435\u0440\u0432\u0435\u0440\u0435 \u043f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430\u002e
+#job_error_mail.serverUrl = <li><b>Server URL:</b>
+#job_error_mail.serverUrl = <li><b>Адресс сервера:</b>
+job_error_mail.serverUrl = <li><b>\u0410\u0434\u0440\u0435\u0441\u0441 \u0441\u0435\u0440\u0432\u0435\u0440\u0430:</b>
+#job_error_mail.studyName = <li><b>Study name:</b>
+#job_error_mail.studyName = <li><b>Имя исследования:</b>
+job_error_mail.studyName = <li><b>\u0418\u043c\u044f \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f:</b>
+#job_error_mail.siteName = <li><b>Site name:</b>
+#job_error_mail.siteName = <li><b>Имя сайта:</b>
+job_error_mail.siteName = <li><b>\u0418\u043c\u044f \u0441\u0430\u0439\u0442\u0430:</b>
+#job_error_mail.userName = <li><b>User name:</b>
+#job_error_mail.userName = <li><b>Имя пользователя:</b>
+job_error_mail.userName = <li><b>\u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f:</b>
+#job_error_mail.userEmail = <li><b>User email:</b>
+#job_error_mail.userEmail = <li><b>Email пользователя:</b>
+job_error_mail.userEmail = <li><b>Email \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f:</b>
+#job_error_mail.userRole = <li><b>User role:</b>
+#job_error_mail.userRole = <li><b>Роль пользователя:</b>
+job_error_mail.userRole = <li><b>\u0420\u043e\u043b\u044c \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f:</b>
+#job_error_mail.jobName = <li><b>Job name:</b>
+#job_error_mail.jobName = <li><b>Имя задачи:</b>
+job_error_mail.jobName = <li><b>\u0418\u043c\u044f \u0437\u0430\u0434\u0430\u0447\u0438:</b>
+#job_error_mail.fileName = <li><b>File name:</b>
+#job_error_mail.fileName = <li><b>Имя файла:</b>
+job_error_mail.fileName = <li><b>\u0418\u043c\u044f \u0444\u0430\u0439\u043b\u0430:</b>
+#job_error_mail.datasetName = <li><b>Dataset name:</b>
+#job_error_mail.datasetName = <li><b>Имя набора данных:</b>
+job_error_mail.datasetName = <li><b>\u0418\u043c\u044f \u043d\u0430\u0431\u043e\u0440\u0430 \u0434\u0430\u043d\u043d\u044b\u0445:</b>
+#job_error_mail.error = <li><b>Error:</b>
+#job_error_mail.error = <li><b>Ошибка:</b>
+job_error_mail.error = <li><b>\u041e\u0448\u0438\u0431\u043a\u0430:</b>
+#job_error_mail.additionalInfo = <li><b>Additional Information:</b>
+#job_error_mail.additionalInfo = <li><b>Дополнительная Информация:</b>
+job_error_mail.additionalInfo = <li><b>\u0414\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u0430\u044f \u0418\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u044f:</b>
+
+#mail.respect_privacy = We respect your privacy, please review our
+#mail.respect_privacy = Мы уважаем вашу конфиденциальность, пожалуйста, ознакомьтесь с нашей
+mail.respect_privacy = \u041c\u044b \u0443\u0432\u0430\u0436\u0430\u0435\u043c \u0432\u0430\u0448\u0443 \u043a\u043e\u043d\u0444\u0438\u0434\u0435\u043d\u0446\u0438\u0430\u043b\u044c\u043d\u043e\u0441\u0442\u044c\u002c \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u043e\u0437\u043d\u0430\u043a\u043e\u043c\u044c\u0442\u0435\u0441\u044c \u0441 \u043d\u0430\u0448\u0435\u0439
+#mail.privacy_policy = Privacy Policy
+#mail.privacy_policy = Политикой Конфиденциальности
+mail.privacy_policy = \u041f\u043e\u043b\u0438\u0442\u0438\u043a\u043e\u0439 \u041a\u043e\u043d\u0444\u0438\u0434\u0435\u043d\u0446\u0438\u0430\u043b\u044c\u043d\u043e\u0441\u0442\u0438
+#mail.more_information = for more information.
+#mail.more_information = для получения дополнительной информации.
+mail.more_information = \u0434\u043b\u044f \u043f\u043e\u043b\u0443\u0447\u0435\u043d\u0438\u044f \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0439 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438.
 dcf = DCF
 discrepancy_correction_form = Discrepancy Correction Form
 dcf_specify_render_type = Please specify how DCFs should be generated
