Fixes #2004: Change Pending/Unavailable in Audit History in DN. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2461 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -211,6 +211,8 @@ initial_data_entry_complete = initial data entry complete
 
 initial_data_entry_completed = initial data entry completed
 
+initial = initial
+
 int = int
 
 integer = integer
