--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -325,6 +325,9 @@ initial_data_entry_complete = \u043f\u0435\u0440\u0432\u044b\u0439 \u0432\u0432\
 #initial_data_entry_completed =  initial data entry completed
 #initial_data_entry_completed = первый ввод данных завершен
 initial_data_entry_completed = \u043f\u0435\u0440\u0432\u044b\u0439 \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d
+#initial = initial
+#initial = исходный
+initial = \u0438\u0441\u0445\u043e\u0434\u043d\u044b\u0439
 #int =  int
 #int =  int
 int =  int
