Fixes #1998: DCF: Implement DCF Study Parameters. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2463 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7307,7 +7307,7 @@ dcf_specify_render_type = Please specify how DCFs should be generated
 dcf_render_save = Save the DCF
 dcf_render_print = Print the DCF
 dcf_render_email = Email the DCF to
-dcf_generate = Generete DCF
+dcf_generate = Generate DCF
 investigator = Investigator
 type = Type
 crf_item_name = CRF Item Name
@@ -7320,3 +7320,4 @@ dcf_dm_use_only = DM USE ONLY
 dcf_dm_signature = DM Signature
 dcf_no_db_change = No DB Change
 dcf_db_change = DB Change
+dcf_allow_discrepancy_correction_forms = Allow Discrepancy Correction Forms?
