Fixed #1946: Item level SDV. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2464 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -1360,3 +1360,4 @@ crf_version_oid = CRF Version OID
 of_warnings = of Warnings
 of_discrepancy_notes = of Discrepancy Notes
 
+data_was_saved_successfully = Data has been saved successfully.
