--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_ru.properties
@@ -2343,3 +2343,7 @@ repeat_key = \u041a\u043b\u044e\u0447 \u043f\u043e\u0432\u0442\u043e\u0440\u0435
 #crf_version_oid = CRF Version OID
 #crf_version_oid = OID версии ИРК
 crf_version_oid = \u004f\u0049\u0044 \u0432\u0435\u0440\u0441\u0438\u0438 \u0418\u0420\u041a
+
+#data_was_saved_successfully = Data has been saved successfully.
+#data_was_saved_successfully = Данные были успешно сохранены.
+data_was_saved_successfully = \u0414\u0430\u043D\u043D\u044B\u0435 \u0431\u044B\u043B\u0438 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u044B.
