--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -87,6 +87,10 @@ New = New
 
 Not_Applicable = Not Applicable
 
+entireCRF = Entire CRF
+
+specificItems = Specific Items
+
 OTH = OTH
 
 # Add terms below this line for OpenClinica-2.5
