--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2188,6 +2188,10 @@ subject_of_your_question = Subject of your question
 
 subject_person_ID_required = Collect Person ID?
 
+itemLevelSDVRequired = Item-level SDV required ?
+
+sdv_item = SDV item
+
 subject's_record = Subject's Record
 
 # "Subject Person ID Required?" changed for Mantis Issue 2201
@@ -3897,7 +3901,6 @@ dcf_render_print = Print the DCF
 dcf_render_email = Email the DCF to
 dcf_generate = Generate DCF
 investigator = Investigator
-type = Type
 crf_item_name = CRF Item Name
 crf_value = CRF Value
 question_to_site = Question to Site
