--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -136,6 +136,12 @@ New = \u041d\u043e\u0432\u044b\u0439
 #Not_Applicable =  Not Applicable
 #Not_Applicable = Не применимо
 Not_Applicable = \u041d\u0435 \u043f\u0440\u0438\u043c\u0435\u043d\u0438\u043c\u043e
+#entireCRF = Entire CRF
+#entireCRF = Вся ИРК
+entireCRF = \u0412\u0441\u044F \u0418\u0420\u041A
+#specificItems = Specific Items
+#specificItems = Определенные переменные
+specificItems = \u041E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u043D\u044B\u0435 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435
 #OTH =  OTH
 #OTH =  OTH
 OTH =  OTH
