--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2701,6 +2701,13 @@ request_study_access  = \u0417\u0430\u043f\u0440\u043e\u0441 \u0434\u043e\u0441\
 #required  =  Required
 #required  = Обязательное
 required  = \u041e\u0431\u044f\u0437\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435
+#itemLevelSDVRequired = Item-level SDV required ?
+#itemLevelSDVRequired = SDV уровня переменной обязательно ?
+itemLevelSDVRequired = SDV \u0443\u0440\u043E\u0432\u043D\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439 \u043E\u0431\u044F\u0437\u0430\u0442\u0435\u043B\u044C\u043D\u043E ?
+#sdv_item = SDV item
+#sdv_item = Провести SDV переменной
+sdv_item = \u041F\u0440\u043E\u0432\u0435\u0441\u0442\u0438 SDV \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
+
 #reset_password  =  Reset password
 #reset_password  = Сбросить пароль
 reset_password  = \u0421\u0431\u0440\u043e\u0441\u0438\u0442\u044c \u043f\u0430\u0440\u043e\u043b\u044c
@@ -7309,7 +7316,6 @@ dcf_render_print = Print the DCF
 dcf_render_email = Email the DCF to
 dcf_generate = Generate DCF
 investigator = Investigator
-type = Type
 crf_item_name = CRF Item Name
 crf_value = CRF Value
 question_to_site = Question to Site
