Fixes #2006: DCF: Improve displayed information. Submitted by Frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2465 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_en.properties
@@ -115,6 +115,7 @@ nullValue = nullValue.htm
 # and for data submitted, and should not be changed.
 ########################################
 oc_date_format_string = yyyy-MM-dd
+oc_date_time_format_string = yyyy-MM-dd HH:mm:ss
 
 #########################################
 # phone_format
