--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
@@ -115,6 +115,7 @@ nullValue = nullValue.htm
 # and for data submitted, and should not be changed.
 ########################################
 oc_date_format_string = yyyy-MM-dd
+oc_date_time_format_string = yyyy-MM-dd HH:mm:ss
 
 #########################################
 # phone_format
