Fixes #1997: DCF: Implement Email/Print/Save. Submitted by hagafrank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2468 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3881,6 +3881,8 @@ job_error_mail.body = You have received this email because an exception was thro
 job_error_mail.serverUrl = <li><b>Server URL:</b>
 job_error_mail.studyName = <li><b>Study name:</b>
 job_error_mail.siteName = <li><b>Site name:</b>
+job_error_mail.firstName = <li><b>First name:</b>
+job_error_mail.lastName = <li><b>Last name:</b>
 job_error_mail.userName = <li><b>User name:</b>
 job_error_mail.userEmail = <li><b>User email:</b>
 job_error_mail.userRole = <li><b>User role:</b>
@@ -3916,3 +3918,11 @@ dcf_visit_item_name = Visit Item Name
 dcf_visit_item_value = Visit Item Value
 dcf_subject_item_name = Subject Item Name
 dcf_subject_item_value = Subject Item Value
+dcf_invalid_email_message = Invalid email
+dcf_generated_dcf = Generated DCF
+dcf_generated_successfully = DCF generated successfully
+dcf_generated_successfully_emailed = DCF generated successfully and emailed to {0}
+dcf_generation_failed = DCF generation failed. Please contact your System Administrator.
+dcf_generation_failed_details = DCF generation failed. Details: {0}
+dcf_generation_email_failed = DCF generation did not complete due to email sending failure. Please contact your System Administrator.
+dcf_email_subject_multiple = DCF: Multiple DCFs
