--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7274,6 +7274,12 @@ job_error_mail.studyName = <li><b>\u0418\u043c\u044f \u0438\u0441\u0441\u043b\u0
 #job_error_mail.siteName = <li><b>Site name:</b>
 #job_error_mail.siteName = <li><b>Имя сайта:</b>
 job_error_mail.siteName = <li><b>\u0418\u043c\u044f \u0441\u0430\u0439\u0442\u0430:</b>
+#job_error_mail.firstName = <li><b>First name:</b>
+#job_error_mail.firstName = <li><b>Имя:</b>
+job_error_mail.firstName = <li><b>\u0418\u043c\u044f:</b>
+#job_error_mail.lastName = <li><b>Last name:</b>
+#job_error_mail.lastName = <li><b>Фамилия:</b>
+job_error_mail.lastName = <li><b>\u0424\u0430\u043c\u0438\u043b\u0438\u044f:</b>
 #job_error_mail.userName = <li><b>User name:</b>
 #job_error_mail.userName = <li><b>Имя пользователя:</b>
 job_error_mail.userName = <li><b>\u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f:</b>
@@ -7331,3 +7337,11 @@ dcf_visit_item_name = Visit Item Name
 dcf_visit_item_value = Visit Item Value
 dcf_subject_item_name = Subject Item Name
 dcf_subject_item_value = Subject Item Value
+dcf_invalid_email_message = Invalid email
+dcf_generated_dcf = Generated DCF
+dcf_generated_successfully = DCF generated successfully
+dcf_generated_successfully_emailed = DCF generated successfully and emailed to {0}
+dcf_generation_failed = DCF generation failed. Please contact your System Administrator.
+dcf_generation_failed_details = DCF generation failed. Details: {0}
+dcf_generation_email_failed = DCF generation did not complete due to email sending failure. Please contact your System Administrator.
+dcf_email_subject_multiple = DCF: Multiple DCFs
