--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -812,4 +812,6 @@ the_study_should_be_selected = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 
 #at_least_one_of_the_following = At least one of the following should be greater than zero.
 #at_least_one_of_the_following = Хотя бы один из следующих элементов должен быть больше нуля.
 at_least_one_of_the_following = \u0425\u043e\u0442\u044f \u0431\u044b \u043e\u0434\u0438\u043d \u0438\u0437 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0445 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043e\u0432 \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u0431\u043e\u043b\u044c\u0448\u0435 \u043d\u0443\u043b\u044f
-cc_repo_directory_not_found = The directory <i>{0}</i> does not exist on this server. Please contact your System Administrator.
+#cc_repo_directory_not_found = The directory <i>{0}</i> does not exist on this server. Please contact your System Administrator.
+#cc_repo_directory_not_found = Папка <i>{0}</i> отсутствует на данном сервере. Пожалуйста, свяжитесь с системным администратором.
+cc_repo_directory_not_found = \u041f\u0430\u043f\u043a\u0430 \u003c\u0069\u003e\u007b\u0030\u007d\u003c\u002f\u0069\u003e \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u043d\u0430 \u0434\u0430\u043d\u043d\u043e\u043c \u0441\u0435\u0440\u0432\u0435\u0440\u0435\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c\u002e
