--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7314,34 +7314,96 @@ mail.privacy_policy = \u041f\u043e\u043b\u0438\u0442\u0438\u043a\u043e\u0439 \u0
 #mail.more_information = for more information.
 #mail.more_information = для получения дополнительной информации.
 mail.more_information = \u0434\u043b\u044f \u043f\u043e\u043b\u0443\u0447\u0435\u043d\u0438\u044f \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0439 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438.
-dcf = DCF
-discrepancy_correction_form = Discrepancy Correction Form
-dcf_specify_render_type = Please specify how DCFs should be generated
-dcf_render_save = Save the DCF
-dcf_render_print = Print the DCF
-dcf_render_email = Email the DCF to
-dcf_generate = Generate DCF
-investigator = Investigator
-crf_item_name = CRF Item Name
-crf_value = CRF Value
-question_to_site = Question to Site
-response_from_site = Response from Site
-dcf_visit = Visit
-dcf_investigators_signature = Investigator's Signature
-dcf_dm_use_only = DM USE ONLY
-dcf_dm_signature = DM Signature
-dcf_no_db_change = No DB Change
-dcf_db_change = DB Change
-dcf_allow_discrepancy_correction_forms = Allow Discrepancy Correction Forms?
-dcf_visit_item_name = Visit Item Name
-dcf_visit_item_value = Visit Item Value
-dcf_subject_item_name = Subject Item Name
-dcf_subject_item_value = Subject Item Value
-dcf_invalid_email_message = Invalid email
-dcf_generated_dcf = Generated DCF
-dcf_generated_successfully = DCF generated successfully
-dcf_generated_successfully_emailed = DCF generated successfully and emailed to {0}
-dcf_generation_failed = DCF generation failed. Please contact your System Administrator.
-dcf_generation_failed_details = DCF generation failed. Details: {0}
-dcf_generation_email_failed = DCF generation did not complete due to email sending failure. Please contact your System Administrator.
-dcf_email_subject_multiple = DCF: Multiple DCFs
+#dcf = DCF
+#dcf = ФКЗ
+dcf = \u0424\u041a\u0417
+#discrepancy_correction_form = Discrepancy Correction Form
+#discrepancy_correction_form = Форма коррекции замечания
+discrepancy_correction_form = \u0424\u043e\u0440\u043c\u0430 \u043a\u043e\u0440\u0440\u0435\u043a\u0446\u0438\u0438 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f
+#dcf_specify_render_type = Please specify how DCFs should be generated
+#dcf_specify_render_type = Пожалуйста, уточните в каком виде представить ФКЗ
+dcf_specify_render_type = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0443\u0442\u043e\u0447\u043d\u0438\u0442\u0435 \u0432 \u043a\u0430\u043a\u043e\u043c \u0432\u0438\u0434\u0435 \u043f\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u044c \u0424\u041a\u0417
+#dcf_render_save = Save the DCF
+#dcf_render_save = Сохранить ФКЗ
+dcf_render_save = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0424\u041a\u0417
+#dcf_render_print = Print the DCF
+#dcf_render_print = Распечатать ФКЗ
+dcf_render_print = \u0420\u0430\u0441\u043f\u0435\u0447\u0430\u0442\u0430\u0442\u044c \u0424\u041a\u0417
+#dcf_render_email = Email the DCF to
+#dcf_render_email = Отправить по почте
+dcf_render_email = \u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c \u043f\u043e \u043f\u043e\u0447\u0442\u0435
+#dcf_generate = Generate DCF
+#dcf_generate = Сгенерировать ФКЗ
+dcf_generate = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0424\u041a\u0417
+#investigator = Investigator
+#investigator = Исследователь
+investigator = \u0418\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c
+#crf_item_name = CRF Item Name
+#crf_item_name = ИРК елемент
+crf_item_name = \u0418\u0420\u041a \u0435\u043b\u0435\u043c\u0435\u043d\u0442
+#crf_value = CRF Value
+#crf_value = Значение ИРК
+crf_value = \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0418\u0420\u041a
+#question_to_site = Question to Site
+#question_to_site = Вопрос сайту
+question_to_site = \u0412\u043e\u043f\u0440\u043e\u0441 \u0441\u0430\u0439\u0442\u0443
+#response_from_site = Response from Site
+#response_from_site = Ответ с сайта
+response_from_site = \u041e\u0442\u0432\u0435\u0442 \u0441 \u0441\u0430\u0439\u0442\u0430
+#dcf_visit = Visit
+#dcf_visit = Визит
+dcf_visit = \u0412\u0438\u0437\u0438\u0442
+#dcf_investigators_signature = Investigator's Signature
+#dcf_investigators_signature = Подпись исследователя
+dcf_investigators_signature = \u041f\u043e\u0434\u043f\u0438\u0441\u044c \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044f
+#dcf_dm_use_only = DM USE ONLY
+#dcf_dm_use_only = Только для МД
+dcf_dm_use_only = \u0422\u043e\u043b\u044c\u043a\u043e \u0434\u043b\u044f \u041c\u0414
+#dcf_dm_signature = DM Signature
+#dcf_dm_signature = Подпись МД
+dcf_dm_signature = \u041f\u043e\u0434\u043f\u0438\u0441\u044c \u041c\u0414
+#dcf_no_db_change = No DB Change
+#dcf_no_db_change = Без изменений БД
+dcf_no_db_change = \u0411\u0435\u0437 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u0439 \u0411\u0414
+#dcf_db_change = DB Change
+#dcf_db_change = С изменениями БД
+dcf_db_change = \u0421 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f\u043c\u0438 \u0411\u0414
+#dcf_allow_discrepancy_correction_forms = Allow Discrepancy Correction Forms?
+#dcf_allow_discrepancy_correction_forms = Включить форму коррекции замечаний?
+dcf_allow_discrepancy_correction_forms = \u0412\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0444\u043e\u0440\u043c\u0443 \u043a\u043e\u0440\u0440\u0435\u043a\u0446\u0438\u0438 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u0439\u003f
+#dcf_visit_item_name = Visit Item Name
+#dcf_visit_item_name = Имя елемента визита
+dcf_visit_item_name = \u0418\u043c\u044f \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u0432\u0438\u0437\u0438\u0442\u0430
+#dcf_visit_item_value = Visit Item Value
+#dcf_visit_item_value = Значение елемента визита
+dcf_visit_item_value = \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u0435\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u0432\u0438\u0437\u0438\u0442\u0430
+#dcf_subject_item_name = Subject Item Name
+#dcf_subject_item_name = Имя элемента субъекта
+dcf_subject_item_name = \u0418\u043c\u044f \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430
+#dcf_subject_item_value = Subject Item Value
+#dcf_subject_item_value = Значение элемента субъекта
+dcf_subject_item_value = \u0417\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430 \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430
+#dcf_invalid_email_message = Invalid email
+#dcf_invalid_email_message = Неправильный email
+dcf_invalid_email_message = \u041d\u0435\u043f\u0440\u0430\u0432\u0438\u043b\u044c\u043d\u044b\u0439 \u0065\u006d\u0061\u0069\u006c
+#dcf_generated_dcf = Generated DCF
+#dcf_generated_dcf = Сгенерированное ФКЗ
+dcf_generated_dcf = \u0421\u0433\u0435\u043d\u0435\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u043e\u0435 \u0424\u041a\u0417
+#dcf_generated_successfully = DCF generated successfully
+#dcf_generated_successfully = ФКЗ успешно создано
+dcf_generated_successfully = \u0424\u041a\u0417 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u043d\u043e
+#dcf_generated_successfully_emailed = DCF generated successfully and emailed to {0}
+#dcf_generated_successfully_emailed = ФКЗ успешно создано и отправленно на почту {0}
+dcf_generated_successfully_emailed = \u0424\u041a\u0417 \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0441\u043e\u0437\u0434\u0430\u043d\u043e \u0438 \u043e\u0442\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u043d\u043e \u043d\u0430 \u043f\u043e\u0447\u0442\u0443 \u007b\u0030\u007d
+#dcf_generation_failed = DCF generation failed. Please contact your System Administrator.
+#dcf_generation_failed = Создание ФКЗ закончилось ошибкой. Пожалуйста, свяжитесь с системным администратором
+dcf_generation_failed = \u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435 \u0424\u041a\u0417 \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u043e\u0441\u044c \u043e\u0448\u0438\u0431\u043a\u043e\u0439\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c
+#dcf_generation_failed_details = DCF generation failed. Details: {0}
+#dcf_generation_failed_details = Создание ФКЗ закончилось ошибкой. Подробности: {0}
+dcf_generation_failed_details = \u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435 \u0424\u041a\u0417 \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u043e\u0441\u044c \u043e\u0448\u0438\u0431\u043a\u043e\u0439\u002e \u041f\u043e\u0434\u0440\u043e\u0431\u043d\u043e\u0441\u0442\u0438\u003a \u007b\u0030\u007d
+#dcf_generation_email_failed = DCF generation did not complete due to email sending failure. Please contact your System Administrator.
+#dcf_generation_email_failed = Создание ФКЗ закончилось ошибкой отправки письма. Пожалуйста, свяжитесь с системным администратором
+dcf_generation_email_failed = \u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435 \u0424\u041a\u0417 \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u043e\u0441\u044c \u043e\u0448\u0438\u0431\u043a\u043e\u0439 \u043e\u0442\u043f\u0440\u0430\u0432\u043a\u0438 \u043f\u0438\u0441\u044c\u043c\u0430\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430\u002c \u0441\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u043d\u044b\u043c \u0430\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440\u043e\u043c
+#dcf_email_subject_multiple = DCF: Multiple DCFs
+#dcf_email_subject_multiple = ФКЗ: Множественные ФКЗ
+dcf_email_subject_multiple = \u0424\u041a\u0417\u003a \u041c\u043d\u043e\u0436\u0435\u0441\u0442\u0432\u0435\u043d\u043d\u044b\u0435 \u0424\u041a\u0417
